   - [regress/agent-ptrace.sh regress/agent-timeout.sh]
     "grep -q" -> "grep >/dev/null"
   - [regress/agent.sh regress/proto-version.sh regress/ssh-com.sh
     regress/test-exec.sh] Handle different was of echoing without newlines.
   - [regress/dynamic-forward.sh] Some "which" programs output on stderr.
   - [regress/sftp-cmds.sh] Use portable "test" option.

20030903
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/26 09:58:43
     [auth-passwd.c auth.c auth.h auth1.c auth2-none.c auth2-passwd.c]
     [auth2.c monitor.c]
     fix passwd auth for 'username leaks via timing'; with djm@, original 
     patches from solar
   - markus@cvs.openbsd.org 2003/08/28 12:54:34
     [auth.h]
     remove kerberos support from ssh1, since it has been replaced with GSSAPI;
     but keep kerberos passwd auth for ssh1 and 2; ok djm, hin, henning, ...
   - markus@cvs.openbsd.org 2003/09/02 16:40:29
     [version.h]
     enter 3.7
   - jmc@cvs.openbsd.org 2003/09/02 18:50:06
     [sftp.1 ssh_config.5]
     escape punctuation;
     ok deraadt@

20030902
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2003/08/24 17:36:51
     [auth2-gss.c]
     64 bit cleanups; markus ok
   - markus@cvs.openbsd.org 2003/08/28 12:54:34
     [auth-krb5.c auth.h auth1.c monitor.c monitor.h monitor_wrap.c]
     [monitor_wrap.h readconf.c servconf.c session.c ssh_config.5]
     [sshconnect1.c sshd.c sshd_config sshd_config.5]
     remove kerberos support from ssh1, since it has been replaced with GSSAPI;
     but keep kerberos passwd auth for ssh1 and 2; ok djm, hin, henning, ...
   - markus@cvs.openbsd.org 2003/08/29 10:03:15
     [compat.c compat.h]
     SSH_BUG_K5USER is unused; ok henning@
   - markus@cvs.openbsd.org 2003/08/29 10:04:36
     [channels.c nchan.c]
     be less chatty; debug -> debug2, cleanup; ok henning@
   - markus@cvs.openbsd.org 2003/08/31 10:26:04
     [progressmeter.c]
     pass file_size + 1 to snprintf: fixes printing of truncated