@@ -21,6 +21,8 @@
      regress/test-exec.sh] Handle different was of echoing without newlines.
    - [regress/dynamic-forward.sh] Some "which" programs output on stderr.
    - [regress/sftp-cmds.sh] Use portable "test" option.
+   - [regress/test-exec.sh] Use sudo, search for "whoami" equivalent, always
+     use Strictmodes no, wait longer for sshd startup.
 
 20030903
  - (djm) OpenBSD CVS Sync
